--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         var boardId = $("#boardIdInput").val();
 
         // Attach the board ID to the button URLs
-        var baseUrl = "https://chiragapi.vercel.app/";
+        var baseUrl = "https://mishkaapi.vercel.app/";
         var onUrl = baseUrl + "on?id=" + boardId + "&output=";
         var offUrl = baseUrl + "off?id=" + boardId + "&output=";
 
