--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,14 @@
       font-family: Arial, sans-serif;
     }
 
+    /* Center the h1 element */
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
     /* Top navigation bar */
     .topnav {
       background-color: #333;
