--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,11 @@
     .topnav {
       background-color: #333;
       overflow: hidden;
+      display: flex;
+      justify-content: center; /* Center the links */
     }
 
     .topnav a {
-      float: left;
       color: #f2f2f2;
       text-align: center;
       padding: 14px 16px;
@@ -57,6 +58,8 @@
     .container h1 {
       text-align: center;
       color: #333;
+      margin-top: 20px;
+      color: #4CAF50; /* Set light green color */
     }
 
     /* Board form */
@@ -133,13 +136,19 @@
   </style>
 </head>
 <body>
-  <h1>Mishka Automations!</h1>
-  <form id="boardForm">
-    <label for="boardId">Board ID:</label>
-    <input type="text" id="boardId" name="boardId" required>
-    <button type="submit">Submit</button>
-  </form>
-  <div id="outputsContainer"></div>
+  <div class="topnav">
+    <a class="active" href="#">Mishka Automations</a>
+  </div>
+
+  <div class="container">
+    <h1>Mishka Automation!</h1>
+    <form id="boardForm">
+      <label for="boardId">Board ID:</label>
+      <input type="text" id="boardId" name="boardId" required>
+      <button type="submit">Submit</button>
+    </form>
+    <div id="outputsContainer"></div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
