--- a/public/index.html
+++ b/public/index.html
@@ -10,136 +10,139 @@
       padding: 0;
       font-family: Arial, sans-serif;
     }
-
     /* Center the h1 element */
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
-    /* Top navigation bar */
-    .topnav {
-      background-color: #333;
-      overflow: hidden;
-      display: flex;
-      justify-content: center; /* Center the links */
-    }
+/* Top navigation bar */
+.topnav {
+  background-color: lightgreen;
+  overflow: hidden;
+  display: flex;
+  justify-content: center; /* Center the links */
+}
 
-    .topnav a {
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
+.topnav h1 {
+  color: darkgreen;
+  font-size: 24px;
+}
 
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
+.topnav a {
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
 
-    .topnav a.active {
-      background-color: #4CAF50;
-      color: white;
-    }
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
-    /* Control panel container */
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #f9f9f9;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-    }
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
 
-    .container h1 {
-      text-align: center;
-      color: #333;
-      margin-top: 20px;
-      color: #4CAF50; /* Set light green color */
-    }
+/* Control panel container */
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
 
-    /* Board form */
-    #boardForm {
-      text-align: center;
-      margin-bottom: 20px;
-    }
+.container h1 {
+  text-align: center;
+  color: #333;
+  margin-top: 20px;
+  color: #4CAF50; /* Set light green color */
+}
 
-    #boardForm label {
-      font-size: 18px;
-      color: #333;
-    }
+/* Board form */
+#boardForm {
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-    #boardForm input[type="text"] {
-      padding: 8px;
-      font-size: 16px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
+#boardForm label {
+  font-size: 18px;
+  color: #333;
+}
 
-    #boardForm button {
-      padding: 8px 16px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
+#boardForm input[type="text"] {
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
 
-    #boardForm button:hover {
-      background-color: #45a049;
-    }
+#boardForm button {
+  padding: 8px 16px;
+  font-size: 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
-    /* Output container */
-    .output-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 20px;
-      background-color: #fff;
-      border: 1px solid #ddd;
-      padding: 20px;
-      border-radius: 4px;
-      box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease-in-out;
-    }
+#boardForm button:hover {
+  background-color: #45a049;
+}
 
-    .output-container:hover {
-      transform: translateY(-2px);
-    }
+/* Output container */
+.output-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
 
-    .output-container label {
-      font-size: 18px;
-      color: #333;
-      margin-bottom: 10px;
-    }
+.output-container:hover {
+  transform: translateY(-2px);
+}
 
-    .output-container button {
-      padding: 8px 16px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
+.output-container label {
+  font-size: 18px;
+  color: #333;
+  margin-bottom: 10px;
+}
 
-    .output-container button:hover {
-      background-color: #45a049;
-    }
-  </style>
+.output-container button {
+  padding: 8px 16px;
+  font-size: 16px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.output-container button:hover {
+  background-color: #45a049;
+}
+</style>
 </head>
 <body>
   <div class="topnav">
- <h1>Mishka Automation!</h1>
+    <h1>Mishka Automations</h1>
   </div>
-
   <div class="container">
     <form id="boardForm">
       <label for="boardId">Board ID:</label>
@@ -148,7 +151,6 @@
     </form>
     <div id="outputsContainer"></div>
   </div>
-
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
     $(document).ready(() => {
