--- a/public/index.html
+++ b/public/index.html
@@ -3,126 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Control Panel</title>
-  <style>
-    /* Reset some default styles */
-    html, body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-    }
-
-    /* Top navigation bar */
-    .topnav {
-      background-color: #333;
-      overflow: hidden;
-    }
-
-    .topnav a {
-      float: left;
-      color: #f2f2f2;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-      font-size: 17px;
-    }
-
-    .topnav a:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    .topnav a.active {
-      background-color: #4CAF50;
-      color: white;
-    }
-
-    /* Control panel container */
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #f9f9f9;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-    }
-
-    .container h1 {
-      text-align: center;
-      color: #333;
-    }
-
-    /* Board form */
-    #boardForm {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    #boardForm label {
-      font-size: 18px;
-      color: #333;
-    }
-
-    #boardForm input[type="text"] {
-      padding: 8px;
-      font-size: 16px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-
-    #boardForm button {
-      padding: 8px 16px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    #boardForm button:hover {
-      background-color: #45a049;
-    }
-
-    /* Output container */
-    .output-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin-bottom: 20px;
-      background-color: #fff;
-      border: 1px solid #ddd;
-      padding: 20px;
-      border-radius: 4px;
-      box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease-in-out;
-    }
-
-    .output-container:hover {
-      transform: translateY(-2px);
-    }
-
-    .output-container label {
-      font-size: 18px;
-      color: #333;
-      margin-bottom: 10px;
-    }
-
-    .output-container button {
-      padding: 8px 16px;
-      font-size: 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-
-    .output-container button:hover {
-      background-color: #45a049;
-    }
-  </style>
 </head>
 <body>
   <h1>Control Panel</h1>
@@ -147,29 +27,40 @@
       const outputsContainer = $('#outputsContainer');
       outputsContainer.empty();
 
-      for (let i = 1; i <= 12; i++) {
-        const outputContainer = $('<div>', { class: 'output-container' });
-        const outputLabel = $('<label>').text(`Output ${i}`);
-        const onButton = $('<button>', {
-          class: 'on-button',
-          text: 'ON',
-          click: () => updateOutput(boardId, i, 'on')
-        });
-        const offButton = $('<button>', {
-          class: 'off-button',
-          text: 'OFF',
-          click: () => updateOutput(boardId, i, 'off')
-        });
+      // Send a request to retrieve the number of outputs for the specified board
+      $.get(`/numOutputs?id=${boardId}`, (data) => {
+        const numOutputs = parseInt(data);
 
-        outputContainer.append(outputLabel, onButton, offButton);
-        outputsContainer.append(outputContainer);
-      }
+        for (let i = 1; i <= numOutputs; i++) {
+          const outputContainer = $('<div>', { class: 'output-container' });
+          const outputLabel = $('<label>').text(`Output ${i}`);
+          const onButton = $('<button>', {
+            class: 'on-button',
+            text: 'ON',
+            click: () => updateOutput(boardId, i, 'on')
+          });
+          const offButton = $('<button>', {
+            class: 'off-button',
+            text: 'OFF',
+            click: () => updateOutput(boardId, i, 'off')
+          });
+
+          outputContainer.append(outputLabel, onButton, offButton);
+          outputsContainer.append(outputContainer);
+        }
+      }).fail(() => {
+        outputsContainer.html('<p>Failed to retrieve the number of outputs for the specified board.</p>');
+      });
     }
 
     function updateOutput(boardId, output, state) {
       const url = `https://mishkaapi.vercel.app/${state}?id=${boardId}&output=${output}`;
       window.location.href = url;
     }
+
+    setTimeout(() => {
+      window.history.back();
+    }, 10000);
   </script>
 </body>
 </html>
