--- a/public/index.html
+++ b/public/index.html
@@ -19,59 +19,51 @@
       $('#boardForm').submit((event) => {
         event.preventDefault();
         const boardId = $('#boardId').val();
-        fetchOutputs(boardId);
+        renderOutputs(boardId);
       });
     });
 
-    async function fetchOutputs(boardId) {
-      try {
-        const response = await fetch(`/outputs?id=${boardId}`);
-        if (response.ok) {
-          const outputs = await response.json();
-          renderOutputs(outputs);
-        } else {
-          throw new Error('Failed to fetch outputs');
-        }
-      } catch (error) {
-        console.error(error);
-      }
-    }
-
-    function renderOutputs(outputs) {
+    function renderOutputs(boardId) {
       const outputsContainer = $('#outputsContainer');
       outputsContainer.empty();
 
-      outputs.forEach((output) => {
-        const outputContainer = $('<div>', { class: 'output-container' });
-        const outputLabel = $('<label>').text(`Output ${output.outputIndex}`);
-        const onButton = $('<button>', {
-          class: 'on-button',
-          text: 'ON',
-          click: () => updateOutput(output.boardId, output.outputIndex, 'on')
-        });
-        const offButton = $('<button>', {
-          class: 'off-button',
-          text: 'OFF',
-          click: () => updateOutput(output.boardId, output.outputIndex, 'off')
-        });
+      $.get(`/outputs?id=${boardId}`, (outputs) => {
+        if (outputs.length > 0) {
+          outputs.forEach((output) => {
+            const { boardId, outputIndex } = output;
+            const outputContainer = $('<div>', { class: 'output-container' });
+            const outputLabel = $('<label>').text(`Output ${outputIndex}`);
+            const onButton = $('<button>', {
+              class: 'on-button',
+              text: 'ON',
+              click: () => updateOutput(boardId, outputIndex, 'on')
+            });
+            const offButton = $('<button>', {
+              class: 'off-button',
+              text: 'OFF',
+              click: () => updateOutput(boardId, outputIndex, 'off')
+            });
 
-        outputContainer.append(outputLabel, onButton, offButton);
-        outputsContainer.append(outputContainer);
+            outputContainer.append(outputLabel, onButton, offButton);
+            outputsContainer.append(outputContainer);
+          });
+        } else {
+          const noOutputsMessage = $('<p>').text('No outputs defined for the selected board');
+          outputsContainer.append(noOutputsMessage);
+        }
+      }).fail(() => {
+        const errorMessage = $('<p>').text('Failed to retrieve outputs for the selected board');
+        outputsContainer.append(errorMessage);
       });
     }
 
-    async function updateOutput(boardId, output, state) {
-      try {
-        const response = await fetch(`/${state}?id=${boardId}&output=${output}`);
-        if (response.ok) {
-          const message = await response.text();
-          console.log(message);
-        } else {
-          throw new Error('Failed to update output');
-        }
-      } catch (error) {
-        console.error(error);
-      }
+    function updateOutput(boardId, output, state) {
+      const url = `/${state}?id=${boardId}&output=${output}`;
+      $.get(url, (response) => {
+        console.log(response);
+      }).fail(() => {
+        console.log('Failed to update output state');
+      });
     }
   </script>
 </body>
