--- a/public/index.html
+++ b/public/index.html
@@ -21,13 +21,21 @@
         const boardId = $('#boardId').val();
         renderOutputs(boardId);
       });
+
+      const queryParams = new URLSearchParams(window.location.search);
+      const boardId = queryParams.get('boardId');
+      if (boardId) {
+        renderOutputs(boardId);
+      }
     });
 
     function renderOutputs(boardId) {
       const outputsContainer = $('#outputsContainer');
       outputsContainer.empty();
 
-      for (let i = 1; i <= 12; i++) {
+      const numOutputs = boards[boardId].outputs.length;
+
+      for (let i = 1; i <= numOutputs; i++) {
         const outputContainer = $('<div>', { class: 'output-container' });
         const outputLabel = $('<label>').text(`Output ${i}`);
         const onButton = $('<button>', {
@@ -43,18 +51,62 @@
 
         outputContainer.append(outputLabel, onButton, offButton);
         outputsContainer.append(outputContainer);
+
+        // Fetch the output status and update the button state
+        fetchOutputStatus(boardId, i);
       }
     }
 
     function updateOutput(boardId, output, state) {
-      const url = `https://mishkaapi.vercel.app/${state}?id=${boardId}&output=${output}`;
-      window.location.href = url;
+      const url = `/${state}?id=${boardId}&output=${output}`;
+      fetch(url)
+        .then(response => {
+          if (response.ok) {
+            // Fetch the updated output status and update the button state
+            fetchOutputStatus(boardId, output);
+          } else {
+            console.error(`Failed to update output ${output}: ${response.statusText}`);
+          }
+        })
+        .catch(error => {
+          console.error(`Failed to update output ${output}: ${error}`);
+        });
+    }
+
+    function fetchOutputStatus(boardId, output) {
+      const url = `/status?id=${boardId}&output=${output}`;
+      fetch(url)
+        .then(response => {
+          if (response.ok) {
+            return response.text();
+          } else {
+            throw new Error(`Failed to fetch output ${output} status: ${response.statusText}`);
+          }
+        })
+        .then(status => {
+          updateButtonState(output, status);
+        })
+        .catch(error => {
+          console.error(`Failed to fetch output ${output} status: ${error}`);
+        });
+    }
+
+    function updateButtonState(output, status) {
+      const onButton = $(`.on-button:nth-child(${output})`);
+      const offButton = $(`.off-button:nth-child(${output})`);
+
+      if (status === 'ON') {
+        onButton.prop('disabled', true);
+        offButton.prop('disabled', false);
+      } else {
+        onButton.prop('disabled', false);
+        offButton.prop('disabled', true);
+      }
     }
 
     setTimeout(() => {
-     window.history.back();
-      }, 10000);
-
+      window.history.back();
+    }, 10000);
   </script>
 </body>
 </html>
