--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
         })
         .fail(() => {
           console.log('Board is not connected to the internet');
-          window.location.href = '/no-internet.html';
+          window.location.href = '/no-internet.html'; // Redirect to the no-internet.html page
         });
     }
 
