--- a/public/index.html
+++ b/public/index.html
@@ -47,14 +47,13 @@
     }
 
     function updateOutput(boardId, output, state) {
-  const url = `https://mishkaapi.vercel.app/${state}?id=${boardId}&output=${output}`;
-  window.location.href = url;
+      const url = `https://mishkaapi.vercel.app/${state}?id=${boardId}&output=${output}`;
+      window.location.href = url;
+    }
 
-  // Delay the redirection to the main page by 1 second
-  setTimeout(() => {
-    window.location.href = 'https://mishkaapi.vercel.app/';
-  }, 1000);
-}
+    setTimeout(() => {
+     window.history.back();
+      }, 10000);
 
   </script>
 </body>
